<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_background"
    tools:context="com.vomont.vlink.login.LoginActivity" >

    <ImageView
        android:layout_marginTop="80dp"
        android:id="@+id/user_image"
        android:src="@mipmap/vlogo1024_circle"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_image"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="65dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/linearlayout_bg"
            android:orientation="horizontal"
            android:padding="5dp" >

            <ImageView
                android:layout_gravity="center"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@mipmap/accountpass" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/accountpassword_gap" />

            <EditText
                android:textColor="@color/black"
                android:id="@+id/login_num"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/input_num"
                android:maxLength="11"
                android:singleLine="true"
                android:textColorHint="@color/top_text_color"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/linearlayout_bg"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@mipmap/accountpassword_lock" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/accountpassword_gap" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/login_psd"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:background="@null"
                    android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIGKLMNOPQRSTUVWXYZ"
                    android:gravity="center_vertical"
                    android:hint="@string/input_psd"
                    android:inputType="textPassword"
                    android:maxLength="12"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/top_text_color"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/login_psd_look"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:src="@mipmap/eye_password_select" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/login_app"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/login_button"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <LinearLayout
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/newuser_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/user_register"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/register_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/register_login"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/ipsetting"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="20dp"
        android:src="@mipmap/login_ip" />

</RelativeLayout>